# pg-audit-trail

./: .cz.toml  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  casbin.conf  cliff.toml  docker-compose.yml  env.example  policy.csv  schema.puml  start.sh
crates/api/: Cargo.toml
crates/api/src/: dto.rs  handlers.rs  lib.rs  main.rs  repositories.rs  routes.rs
crates/worker/: Cargo.toml
crates/worker-app/: Cargo.toml
crates/worker-app/src/: app.rs  database.rs  lib.rs  main.rs
crates/worker-debezium/: Cargo.toml
crates/worker-debezium/src/: database.rs  debezium.rs  lib.rs  main.rs
crates/worker/src/: database.rs  ingestion.rs  lib.rs  main.rs
crates/worker/src/ingestion/: app.rs
logs/: worker-app.log.2025-07-16
migrations/: 20250307071039_Добавление_таблиц.down.sql  20250307071039_Добавление_таблиц.up.sql  20250402074748_Добавление_primary_key_в_audits.down.sql  20250402074748_Добавление_primary_key_в_audits.up.sql
