[workspace]
members = ["crates/api", "crates/worker-debezium", "crates/worker-app"]

resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
description = "Журнал событий приложения"

rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
uuid = "1.15.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
serde = "1.0.218"
serde_json = "1.0.140"
sqlx = "0.8.3"
sqlx-cli = "0.8.3"
tokio = "1.46.0"
validator = "0.20.0"
futures = "0.3.31"
rdkafka = "0.38.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
redis = "0.32.3"
base64 = "0.22.1"
rayon = "1.10.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
fancy-regex = "0.16.1"
lazy_static = "1.5.0"
axum = "0.8.1"
tower-http = "0.6.2"
axum-valid = "0.24.0"
jsonwebtoken = "10.0.0"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
infer = "0.19.0"
hyper = "1.6.0"
casbin = "2.10.1"
parking_lot = "0.12.3"
