[workspace]
members = ["crates/api", "crates/worker-debezium", "crates/worker-app"]

resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
description = "Журнал событий приложения"

rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
uuid = "1.23.1"
dotenv = "0.15.0"
env_logger = "0.11.9"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = "0.8.6"
sqlx-cli = "0.8.6"
tokio = "1.52.2"
validator = "0.20.0"
futures = "0.3.32"
rdkafka = "0.39.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.5"
redis = "1.2.1"
base64 = "0.22.1"
rayon = "1.12.0"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
fancy-regex = "0.18.0"
lazy_static = "1.5.0"
axum = "0.8.9"
tower-http = "0.6.9"
axum-valid = "0.24.0"
jsonwebtoken = "10.3.0"
utoipa = "5.5.0"
utoipa-swagger-ui = "9.0.2"
infer = "0.19.0"
hyper = "1.9.0"
casbin = "2.20.0"
parking_lot = "0.12.5"
