[package]
name = "api"
version.workspace = true
edition.workspace = true
description = "Ядро приложения журнала событий"

[dependencies]
anyhow.workspace = true
axum-valid.workspace = true
axum.workspace = true
base64.workspace = true
casbin.workspace = true
chrono.workspace = true
dotenv.workspace = true
env_logger.workspace = true
hyper.workspace = true
infer.workspace = true
jsonwebtoken.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx-cli.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
uuid.workspace = true
validator.workspace = true
