[package]
name = "worker-app"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
futures.workspace = true
rdkafka.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
