[package]
name = "worker-debezium"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
dotenv.workspace = true
fancy-regex.workspace = true
futures.workspace = true
lazy_static.workspace = true
rayon.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
