[package]
name = "worker-debezium"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
dotenv.workspace = true
fancy-regex.workspace = true
futures.workspace = true
lazy_static.workspace = true
rayon.workspace = true
rdkafka = { workspace = true, features = ["cmake-build"] }
serde= { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "uuid",
    "chrono",
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "any",
] }
tokio-stream.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["chrono", "env-filter"] }
tracing.workspace = true
