[package]
name = "worker"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sqlx.workspace = true
dotenv.workspace = true
anyhow.workspace = true
rdkafka.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
redis.workspace = true
chrono.workspace = true
base64.workspace = true
rayon.workspace = true

tokio-stream = "0.1.17"
fancy-regex = "0.14.0"
lazy_static = "1.5.0"
